--- a/MRKTO_ai_courses/DEEPLEARNING.ai/Prompt Engineering for Developers/6.Expanding.ipynb
+++ b/MRKTO_ai_courses/DEEPLEARNING.ai/Prompt Engineering for Developers/6.Expanding.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# Expanding\n",
-    "In this lesson, you will generate customer service emails that are tailored to each customer's review.\n",
+    "\n",
+    "Generating customer service emails tailored to each customer's review.\n",
     "\n",
     "## Setup"
    ]
@@ -45,7 +46,10 @@
     "        messages=messages,\n",
     "        temperature=temperature, # this is the degree of randomness of the model's output\n",
     "    )\n",
-    "    return response.choices[0].message[\"content\"]"
+    "    try:\n",
+    "        return response.choices[0].message[\"content\"]\n",
+    "    except (AttributeError, IndexError, KeyError) as e:\n",
+    "        raise Exception(\"Failed to extract content from API response\") from e"
    ]
   },
   {
@@ -167,24 +171,6 @@
     "response = get_completion(prompt, temperature=0.7)\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31e317ad-9e51-4e7a-90c3-d88e7bf8a98c",
-   "metadata": {},
-   "source": [
-    "## Try experimenting on your own!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffa65c7e",
-   "metadata": {
-    "height": 30
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
