--- a/MRKTO_ai_courses/DEEPLEARNING.ai/Prompt Engineering for Developers/1.Guidelines.ipynb
+++ b/MRKTO_ai_courses/DEEPLEARNING.ai/Prompt Engineering for Developers/1.Guidelines.ipynb
@@ -6,23 +6,21 @@
    "metadata": {},
    "source": [
     "# Guidelines for Prompting\n",
-    "In this lesson, you'll practice two prompting principles and their related tactics in order to write effective prompts for large language models.\n",
-    "\n",
-    "## Setup\n",
-    "#### Load the API key and relevant Python libaries."
+    "In this lesson, you'll practice two prompting principles and their related tactics in order to write effective prompts for large language models."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "00bab499-9a50-4bd0-a622-1c914c6ccc29",
+   "id": "de74592a",
    "metadata": {},
    "source": [
-    "In this course, we've provided some code that loads the OpenAI API key for you."
+    "### Setup\n",
+    "Load the API key and relevant Python libaries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "6c382975",
    "metadata": {
     "height": 132,
@@ -32,10 +30,16 @@
    "source": [
     "import openai\n",
     "import os\n",
-    "\n",
+    "import warnings\n",
     "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
+    "# Ignore SyntaxWarning\n",
+    "warnings.filterwarnings(\"ignore\", category=SyntaxWarning)\n",
+    "\n",
+    "# Load environment variables\n",
     "_ = load_dotenv(find_dotenv())\n",
     "\n",
+    "# Set OpenAI API key\n",
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ]
   },
@@ -44,16 +48,14 @@
    "id": "a3acefa8-f8f1-4ef8-932e-9bcefa142666",
    "metadata": {},
    "source": [
-    "#### helper function\n",
-    "Throughout this course, we will use OpenAI's `gpt-3.5-turbo` model and the [chat completions endpoint](https://platform.openai.com/docs/guides/chat). \n",
+    "### Helper function\n",
     "\n",
-    "This helper function will make it easier to use prompts and look at the generated outputs.  \n",
-    "**Note**: In June 2023, OpenAI updated gpt-3.5-turbo. The results you see in the notebook may be slightly different than those in the video. Some of the prompts have also been slightly modified to product the desired results."
+    "[chat completions endpoint](https://platform.openai.com/docs/guides/chat). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a7dff174",
    "metadata": {
     "height": 164,
@@ -61,26 +63,6 @@
    },
    "outputs": [],
    "source": [
-    "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
-    "    messages = [{\"role\": \"user\", \"content\": prompt}]\n",
-    "    response = openai.ChatCompletion.create(\n",
-    "        model=model,\n",
-    "        messages=messages,\n",
-    "        temperature=0, # this is the degree of randomness of the model's output\n",
-    "    )\n",
-    "    return response.choices[0].message[\"content\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8b32ac4",
-   "metadata": {},
-   "source": [
-    "**Note:** This and all other lab notebooks of this course use OpenAI library version `0.27.0`. \n",
-    "\n",
-    "In order to use the OpenAI library version `1.0.0`, here is the code that you would use instead for the `get_completion` function:\n",
-    "\n",
-    "```python\n",
     "client = openai.OpenAI()\n",
     "\n",
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
@@ -90,8 +72,7 @@
     "        messages=messages,\n",
     "        temperature=0\n",
     "    )\n",
-    "    return response.choices[0].message.content\n",
-    "```"
+    "    return response.choices[0].message.content"
    ]
   },
   {
@@ -111,24 +92,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "87121316",
    "metadata": {
     "height": 351,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is important to provide clear and specific instructions to guide a model towards the desired output and reduce the chances of receiving irrelevant or incorrect responses, with longer prompts often providing more clarity and context for more detailed and relevant outputs.\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
-    "You should express what you want a model to do by \\ \n",
-    "providing instructions that are as clear and \\ \n",
-    "specific as you can possibly make them. \\ \n",
-    "This will guide the model towards the desired output, \\ \n",
-    "and reduce the chances of receiving irrelevant \\ \n",
-    "or incorrect responses. Don't confuse writing a \\ \n",
-    "clear prompt with writing a short prompt. \\ \n",
-    "In many cases, longer prompts provide more clarity \\ \n",
-    "and context for the model, which can lead to \\ \n",
+    "You should express what you want a model to do by\n",
+    "providing instructions that are as clear and\n",
+    "specific as you can possibly make them.\n",
+    "This will guide the model towards the desired output\n",
+    "and reduce the chances of receiving irrelevant \n",
+    "or incorrect responses. Don't confuse writing a \n",
+    "clear prompt with writing a short prompt. \n",
+    "In many cases, longer prompts provide more clarity \n",
+    "and context for the model, which can lead to \n",
     "more detailed and relevant outputs.\n",
     "\"\"\"\n",
     "prompt = f\"\"\"\n",
@@ -151,13 +140,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6b50bbbd",
    "metadata": {
     "height": 149,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"book_id\": 1,\n",
+      "        \"title\": \"The Midnight Garden\",\n",
+      "        \"author\": \"Elena Rivers\",\n",
+      "        \"genre\": \"Fantasy\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 2,\n",
+      "        \"title\": \"Echoes of the Past\",\n",
+      "        \"author\": \"Nathan Black\",\n",
+      "        \"genre\": \"Mystery\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"book_id\": 3,\n",
+      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"author\": \"Samantha Reed\",\n",
+      "        \"genre\": \"Romance\"\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Generate a list of three made-up book titles along \\ \n",
@@ -179,13 +195,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "f0ae612e",
    "metadata": {
     "height": 521,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 1:\n",
+      "Step 1 - Get some water boiling.\n",
+      "Step 2 - Grab a cup and put a tea bag in it.\n",
+      "Step 3 - Pour the hot water over the tea bag.\n",
+      "Step 4 - Let the tea steep for a few minutes.\n",
+      "Step 5 - Remove the tea bag.\n",
+      "Step 6 - Add sugar or milk to taste.\n"
+     ]
+    }
+   ],
    "source": [
     "text_1 = f\"\"\"\n",
     "Making a cup of tea is easy! First, you need to get some \\ \n",
@@ -220,13 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "76b6cc59",
    "metadata": {
     "height": 521,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for Text 2:\n",
+      "No steps provided.\n"
+     ]
+    }
+   ],
    "source": [
     "text_2 = f\"\"\"\n",
     "The sun is shining brightly today, and the birds are \\\n",
@@ -269,13 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "82ce1540",
    "metadata": {
     "height": 266,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<grandparent>: The tallest trees weather the strongest storms; the brightest stars shine in the darkest nights; the strongest hearts are forged in the hottest fires.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to answer in a consistent style.\n",
@@ -305,13 +352,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5e7d6860",
    "metadata": {
     "height": 521,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion for prompt 1:\n",
+      "1 - Jack and Jill, siblings from a charming village, go on a quest to fetch water from a hilltop well, but encounter misfortune along the way.\n",
+      "\n",
+      "2 - Jack et Jill, frère et sœur d'un charmant village, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\n",
+      "\n",
+      "3 - Jack, Jill\n",
+      "\n",
+      "4 - \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur d'un charmant village, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "text = f\"\"\"\n",
     "In a charming village, siblings Jack and Jill set out on \\ \n",
@@ -354,13 +420,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3e4222cc",
    "metadata": {
     "height": 370,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Completion for prompt 2:\n",
+      "Summary: Jack and Jill, two siblings, go on a quest to fetch water from a hilltop well but encounter misfortune along the way.\n",
+      "\n",
+      "Translation: Jack et Jill, deux frères et sœurs, partent en quête d'eau d'un puits au sommet d'une colline mais rencontrent des malheurs en chemin.\n",
+      "\n",
+      "Names: Jack, Jill\n",
+      "\n",
+      "Output JSON: \n",
+      "{\n",
+      "  \"french_summary\": \"Jack et Jill, deux frères et sœurs, partent en quête d'eau d'un puits au sommet d'une colline mais rencontrent des malheurs en chemin.\",\n",
+      "  \"num_names\": 2\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "prompt_2 = f\"\"\"\n",
     "Your task is to perform the following actions: \n",
@@ -395,13 +481,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ff5cc985",
    "metadata": {
     "height": 436,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The student's solution is correct. The total cost for the first year of operations as a function of the number of square feet is indeed 450x + 100,000.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Determine if the student's solution is correct or not.\n",
@@ -440,13 +534,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "703f7003",
    "metadata": {
     "height": 1014,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let x be the size of the installation in square feet.\n",
+      "\n",
+      "Costs:\n",
+      "1. Land cost: $100 * x\n",
+      "2. Solar panel cost: $250 * x\n",
+      "3. Maintenance cost: $100,000 + $10 * x\n",
+      "\n",
+      "Total cost for the first year of operations: $100 * x + $250 * x + $100,000 + $10 * x = $360 * x + $100,000\n",
+      "```\n",
+      "The student's solution is incorrect as they did not correctly calculate the total cost for the first year of operations. \n",
+      "\n",
+      "Student grade:\n",
+      "```\n",
+      "incorrect\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to determine if the student's solution \\\n",
@@ -519,13 +635,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "81c80919",
    "metadata": {
     "height": 113,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The AeroGlide UltraSlim Smart Toothbrush by Boie is a high-tech toothbrush designed to provide a superior cleaning experience. It features a sleek and slim design that makes it easy to hold and maneuver in your mouth. The toothbrush is equipped with smart technology that tracks your brushing habits and provides real-time feedback to help you improve your oral hygiene routine.\n",
+      "\n",
+      "The AeroGlide UltraSlim Smart Toothbrush also has soft, durable bristles that are gentle on your gums and teeth, making it suitable for those with sensitive mouths. The toothbrush is rechargeable and comes with a convenient charging base, making it easy to keep it powered up and ready to use.\n",
+      "\n",
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie is a modern and innovative toothbrush that can help you achieve a cleaner and healthier smile.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Tell me about AeroGlide UltraSlim Smart Toothbrush by Boie\n",
@@ -584,7 +712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -598,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
